[project]
name = "obp-clandestine-network-analysis"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Pieter van der Zijden", email = "pietervanderzijden@gmail.com" }
]
dependencies = [
    "streamlit>=1.53.0",
    "pandas>=2.3.3",
    "scipy>=1.17.0",
    "networkx>=3.6.1",
    "argon2-cffi>=25.1.0",
    "scikit-learn>=1.8.0",
    "streamlit-agraph>=0.0.45",
    "watchdog>=6.0.0",
    "igraph>=1.0.0",
    "numpy>=2.4.1",
    "infomap>=2.8.0",
    "leidenalg>=0.11.0",
    "pyvis>=0.3.2",
    "matplotlib>=3.10.8",
    "streamlit-option-menu>=0.4.0",
    "plotly>=6.5.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/obp_clandestine_network_analysis"]
